# Starlight.jl

./: .gitignore  Artifacts.toml  LICENSE  Makefile  Project.toml  README.md  playground.ipynb
.github/workflows/: DocPreviewCleanup.yml  Documentation.yml  TagBot.yml  UnitTests.yml
.ipynb_checkpoints/: playground-checkpoint.ipynb
demo/: light_and_shading.jl  ray_sphere_intersections.jl
dev/: index.html  search_index.js
dev/api/: index.html
dev/examples/pong/: index.html
dev/guide/telescope/input/: index.html
dev/guide/telescope/intro/: index.html
dev/guide/telescope/physics/: index.html
dev/guide/telescope/rendering/: index.html
dev/guide/walkthrough/app-lifecycle/: index.html
dev/guide/walkthrough/clock/: index.html
dev/search/: index.html
docs/: Project.toml  make.jl
docs/src/: api.md  ecs.md  getting-started.md  index.md  message-passing.md
docs/src/examples/: pong.md
docs/view/: Project.toml
examples/: Pong.jl
src/: App.jl  Audio.jl  CMakeLists.txt  Clock.jl  Drawing.jl  ECS.jl  Entities.jl  EntityComponentSystem.jl  Input.jl  Logging.jl  Makefile  Physics.jl  RayTracing.jl  Rendering.jl  SDL.jl  Scene.jl  Starlight.jl  System.jl  TS.jl  Telescope.cpp  Telescope.jl  starlight.jl  telescope  vk_mem_alloc.h  vk_mem_alloc.hpp
src/backends/telescope/: Drawing.jl  Entities.jl  Input.jl  Physics.jl  Telescope.jl
src/examples/pong/: pong.jl
test/: Artifacts.toml  Project.toml  bad.ppm  canvas_dims.ppm  checkers2d.ppm  comments.ppm  linespan.ppm  pixel_check.ppm  runtests.jl  scale.ppm  test.jl  test.yml
(+12 files in other folders)
